<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_wide"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginRight="@dimen/margin_wide"
            style="@style/WhiteBox"
            android:id="@+id/box_one_text"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_three"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:id="@+id/box_four_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:id="@+id/box_five_text"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/red_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/green_button"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ino_txt" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_txt" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/ino_txt" android:textStyle="bold"
            android:textSize="@dimen/box_text_size" android:fontFamily="@font/roboto"/>
    <TextView
            android:text="@string/tap_to_screen_and_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ino_txt" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/box_five_text"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/label_txt"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>